HEARTH-1144 slashes, link fixes, spacing

--- a/common/styles/_settings.scss
+++ b/common/styles/_settings.scss
@@ -54,6 +54,7 @@ $size-small: 10px;
 $size-medium: 15px;
 $size-big: 20px;
 $size-large: 25px;
+$size-xlarge: 35px;
 
 // font awesome icon used for loading
 $fa-loading-icon: '\f110';
