--- a/landing/css/_navigation.scss
+++ b/landing/css/_navigation.scss
@@ -29,7 +29,8 @@
 	background-size: contain;
 	background-repeat: no-repeat;
 	transition: .3s all;
-  border-bottom: none;
+  	border-bottom: none;
+	@extend .delinkify;
 }
 @media (min-width: 400px) {
 	.header-wrapper {
